# eeg-monitor

./: .gitignore  README.md  docker-compose.yml  eeg_lsl_receive.py  eeg_lsl_stream_sim.py  pyproject.toml
db/: init.sql
grafana/: dashboard.json
grafana/dashboards/: eeg-monitor-dashboard.json
grafana/provisioning/dashboards/: dashboards.yaml
grafana/provisioning/datasources/: timescale.yaml
lsl-mock-stream/: Dockerfile  README.md  main.py  pyproject.toml
lsl-receiver/: .env  Dockerfile  eeg_lsl_receive.py  eeg_lsl_stream_sim.py  main.py  pyproject.toml
