[tool.poetry]
name = "eeg-lsl-receiver"
version = "0.1.0"
description = ""
authors = ["flonix8 <flstanek@googlemail.com>"]
license = "AGPLv3"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pylsl = "^1.17.6"
psycopg = "^3.2.6"
dotenv = "^0.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
